--- a/index.html
+++ b/index.html
@@ -41,46 +41,46 @@
             </a>
             <div id="nav--right">
                 <a class="glitch-wrapper" href="#about">
-                    <div class="glitch-txt" data-glitch="about">about</div>
+                    <div class="glitch-txt" data-glitch="About">About</div>
                 </a>
                 <a class="glitch-wrapper" href="#skill">
-                    <div class="glitch-txt" data-glitch="skills">skills</div>
+                    <div class="glitch-txt" data-glitch="Skills">Skills</div>
                 </a>
                 <a class="glitch-wrapper" href="#portfolio">
-                    <div class="glitch-txt" data-glitch="portfolio">portfolio</div>
+                    <div class="glitch-txt" data-glitch="Portfolio">Portfolio</div>
                 </a>
                 <a class="glitch-wrapper" href="#testimonial">
-                    <div class="glitch-txt" data-glitch="testimonials">testimonials</div>
+                    <div class="glitch-txt" data-glitch="Testimonials">Testimonials</div>
                 </a>
                 <a class="glitch-wrapper" href="#contact">
-                    <div class="glitch-txt" data-glitch="contact">contact</div>
+                    <div class="glitch-txt" data-glitch="Contact">Contact</div>
                 </a>
             </div>    
             <div id="sidebar">
                 <ul>
                     <li>
                         <a class="glitch-wrapper" href="#about">
-                            <div class="glitch-txt" data-glitch="about">About</div>
+                            <div class="glitch-txt" data-glitch="About">About</div>
                         </a>
                     </li>
                     <li>
                         <a class="glitch-wrapper" href="#skill">
-                            <div class="glitch-txt" data-glitch="skills">skills</div>
+                            <div class="glitch-txt" data-glitch="Skills">Skills</div>
                         </a>
                     </li>
                     <li>
                         <a class="glitch-wrapper" href="#portfolio">
-                            <div class="glitch-txt" data-glitch="portfolio">portfolio</div>
+                            <div class="glitch-txt" data-glitch="Portfolio">Portfolio</div>
                         </a>
                     </li>
                     <li>
                         <a class="glitch-wrapper" href="#testimonial">
-                            <div class="glitch-txt" data-glitch="testimonials">testimonials</div>
+                            <div class="glitch-txt" data-glitch="Testimonials">Testimonials</div>
                         </a>
                     </li>
                     <li>
                         <a class="glitch-wrapper" href="#contact">
-                            <div class="glitch-txt" data-glitch="contact">contact</div>
+                            <div class="glitch-txt" data-glitch="Contact">Contact</div>
                         </a>
                     </li>
                 </ul>
